# sctx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
example/: GSM4339778_SRR11182002_clusters.csv  Genotype.ipynb
include/: pdebug.hpp  pmixture.hpp  psnvcoexp.hpp
sctxpy/: setup.py
sctxpy/sctx/: find_snvs.py  misc.py
sctxpy/sctx/plt/: __init__.py
sctxpy/sctx/snvs/: _caf.pxd  _distimpl.hpp  calc.cpp  calc.pyx  find.py  snv2vcfmtx.py  snvcmp.py
src/: CMakeLists.txt  pdebug.cpp  pmixture.cpp  psnvcoexp.cpp  sctx.cpp
src/sctx/: cmds.py  filter.py  genotype.py  refine.py  sctxmisc.py  util.py
src/sctx/plt/: formatax.py
src/sctx/snvs/: _cafimpl.hpp  _consensus.hpp  _cutoffs.hpp  _knnimpl.hpp  _matrix.hpp  calc.cpp  scsnv.py
