# pyproject.toml

[build-system]
requries        = []
requires        = ['matplotlib','numpy','scipy', 'cython', 'scikit-learn', 
                'statsmodels', 'h5py', 'flammkuchen',
                'python-igraph', 'leidenalg', 'cyvcf2']
build-backend   = 'setuptools.build_meta'   

[project]
name            = 'sctx'
description = "sctx"
version     = "1.0"
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/GWW/sctx"


[tool.setuptools]
package-dir = {"" = "src"}
#py-modules = ["_custom_build"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sctxmisc = "sctx.sctxmisc:go"
