# pyproject.toml

[build-system]
requires        = ['matplotlib','numpy','scipy', 'cython', 'scikit-learn', 
                'statsmodels', 'h5py', 'flammkuchen',
                'python-igraph', 'leidenalg', 'cyvcf2', 'setuptools', 'wheel']
build-backend   = 'setuptools.build_meta'   

[project]
name            = 'sctx'
description = "sctx"
version     = "1.0"
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/GWW/sctx"

[project.scripts]
sctxmisc = "sctx.sctxmisc:go"
